--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Animation -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- Style.css -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -86,11 +88,11 @@
     <section id="carousel">
         <div class="container">
             <div class="row carousel__content align-items-center">
-                <div class="carousel__left col-lg-6">
+                <div class="carousel__left col-lg-6 animate__animated animate__fadeInLeft">
                     <h1><span class="title__headline">ABOUT US</span></h1>
                     <span class="title__content">The language teaching experts</span>
                 </div>
-                <div class="carousel__right col-lg-6">
+                <div class="carousel__right col-lg-6 animate__animated animate__fadeIn animate__delay-2s">
                     <img class="carousel__image" src="./images/hero_team.png" alt="">
                 </div>
             </div>
@@ -107,7 +109,7 @@
     <section id="ourteam">
         <div class="container">
             <div class="row">
-                <div class="card__item col-lg-3">
+                <div class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-2s animate__faste 100ms">
                     <div class="card card__image">
                         <div class="card__image--hover">
                             <img id="txtImage" class="card-img-top" src="./images/teacher_1.jpg" alt="Card image">
@@ -121,7 +123,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__item col-lg-3">
+                <div class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-3s animate__faste 100ms">
                     <div class="card card__image">
                         <div class="card__image--hover">
                             <img class="card-img-top" src="./images/teacher_2.jpg" alt="Card image">
@@ -134,7 +136,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__item col-lg-3">
+                <div class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-4s animate__faste 100ms">
                     <div class="card card__image">
                         <div class="card__image--hover">
                             <img class="card-img-top" src="./images/teacher_3.jpg" alt="Card image">
@@ -147,7 +149,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__item col-lg-3">
+                <div class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-5s animate__faste 100ms">
                     <div class="card card__image">
                         <div class="card__image--hover">
                             <img class="card-img-top" src="./images/teacher_4.jpg" alt="Card image">
@@ -160,7 +162,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__item col-lg-3">
+                <div class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-2s animate__faste 100ms">
                     <div class="card card__image">
                         <div class="card__image--hover">
                             <img class="card-img-top" src="./images/teacher_5.jpg" alt="Card image">
@@ -173,7 +175,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__item col-lg-3">
+                <div class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-3s animate__faste 100ms">
                     <div class="card card__image">
                         <div class="card__image--hover">
                             <img class="card-img-top" src="./images/teacher_6.jpg" alt="Card image">
@@ -186,7 +188,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__item col-lg-3">
+                <div class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-4s animate__faste 100ms">
                     <div class="card card__image">
                         <div class="card__image--hover">
                             <img class="card-img-top" src="./images/teacher_7.jpg" alt="Card image">
@@ -199,7 +201,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__item col-lg-3">
+                <div class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-5s animate__faste 100ms">
                     <div class="card card__image">
                         <div class="card__image--hover">
                             <img class="card-img-top" src="./images/teacher_8.jpg" alt="Card image">
@@ -227,10 +229,10 @@
     <section id="course">
         <div class="container course__content">
             <div class="row">
-                <div class="course__left col-lg-7">
+                <div class="course__left col-lg-7 animate__animated animate__fadeInLeft"">
                     <img src="./images/conatct_inner.png" alt="">
                 </div>
-                <div class="course__right col-lg-5">
+                <div class="course__right col-lg-5 animate__animated animate__fadeIn animate__delay-2s">
                     <form class="course__form">
                         <h3 class="course__title">Find Your Course</h3>
                         <div class="form-row">
@@ -274,7 +276,7 @@
     <footer id="footer">
         <div class="container footer__content">
             <div class="row">
-                <div class="footer__contact col-lg-3">
+                <div class="footer__contact col-lg-3 animate__animated animate__fadeIn animate__delay-2s animate__faste 100ms">
                     <h5>Contact us</h5>
                     <div class="footer__location footer__contact--detail ">
                         <span class="contact__icon"><i class="fas fa-map-marker-alt"></i></span>
@@ -298,7 +300,7 @@
                     </div>
 
                 </div>
-                <div class="footer__link col-lg-3">
+                <div class="footer__link col-lg-3 animate__animated animate__fadeIn animate__delay-3s animate__faste 100ms">
                     <h5>Quick Links</h5>
                     <ul>
                         <li><a href="#">Home</a></li>
@@ -308,7 +310,7 @@
                     </ul>
 
                 </div>
-                <div class="footer__link col-lg-3">
+                <div class="footer__link col-lg-3 animate__animated animate__fadeIn animate__delay-4s animate__faste 100ms">
                     <h5>About</h5>
                     <ul>
                         <li><a href="#">About Us</a></li>
@@ -318,7 +320,7 @@
                     </ul>
 
                 </div>
-                <div class="footer__form col-lg-3">
+                <div class="footer__form col-lg-3 animate__animated animate__fadeIn animate__delay-5s animate__faste 100ms">
                     <h5>Newsletter</h5>
                     <form">
                         <div class="form-row">
@@ -327,6 +329,7 @@
                             </div>
                             <div class="form-group col-lg-11">
                                 <button type="submit" class="form-control btn__footer">SUBSCRIBE</button>
+
                             </div>
                         </div>
 
@@ -349,6 +352,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <!-- Wowjs -->
+
+    <script src="./libs/animation/wow.min.js"></script>
     <!-- Sticky -->
     <script src="./libs/sticky/sticky.js"></script>
 
