--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
                 </div>
 
                 <div class="phone_navbar">
-                    <a class="btn__callphone" href="#"><span>(+1) 555 234-8765</span></a>
+                    <a class="btn__callphone" href="#"><span><i class="fa-solid fa-phone-flip"></i></span>
+                        <span>(+1) 555 234-8765</span></a>
                 </div>
 
                 <div class="socials_navbar">
@@ -109,7 +110,8 @@
     <section id="ourteam">
         <div class="container">
             <div class="row">
-                <div class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-2s animate__faste 100ms">
+                <div
+                    class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-2s animate__faste 100ms">
                     <div class="card card__image">
                         <div class="card__image--hover">
                             <img id="txtImage" class="card-img-top" src="./images/teacher_1.jpg" alt="Card image">
@@ -123,7 +125,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-3s animate__faste 100ms">
+                <div
+                    class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-3s animate__faste 100ms">
                     <div class="card card__image">
                         <div class="card__image--hover">
                             <img class="card-img-top" src="./images/teacher_2.jpg" alt="Card image">
@@ -136,7 +139,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-4s animate__faste 100ms">
+                <div
+                    class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-4s animate__faste 100ms">
                     <div class="card card__image">
                         <div class="card__image--hover">
                             <img class="card-img-top" src="./images/teacher_3.jpg" alt="Card image">
@@ -149,7 +153,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-5s animate__faste 100ms">
+                <div
+                    class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-5s animate__faste 100ms">
                     <div class="card card__image">
                         <div class="card__image--hover">
                             <img class="card-img-top" src="./images/teacher_4.jpg" alt="Card image">
@@ -162,7 +167,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-2s animate__faste 100ms">
+                <div
+                    class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-2s animate__faste 100ms">
                     <div class="card card__image">
                         <div class="card__image--hover">
                             <img class="card-img-top" src="./images/teacher_5.jpg" alt="Card image">
@@ -175,7 +181,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-3s animate__faste 100ms">
+                <div
+                    class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-3s animate__faste 100ms">
                     <div class="card card__image">
                         <div class="card__image--hover">
                             <img class="card-img-top" src="./images/teacher_6.jpg" alt="Card image">
@@ -188,7 +195,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-4s animate__faste 100ms">
+                <div
+                    class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-4s animate__faste 100ms">
                     <div class="card card__image">
                         <div class="card__image--hover">
                             <img class="card-img-top" src="./images/teacher_7.jpg" alt="Card image">
@@ -201,7 +209,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-5s animate__faste 100ms">
+                <div
+                    class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-5s animate__faste 100ms">
                     <div class="card card__image">
                         <div class="card__image--hover">
                             <img class="card-img-top" src="./images/teacher_8.jpg" alt="Card image">
@@ -230,7 +239,7 @@
         <div class="container course__content">
             <div class="row">
                 <div class="course__left col-lg-7 animate__animated animate__fadeInLeft"">
-                    <img src="./images/conatct_inner.png" alt="">
+                    <img src=" ./images/conatct_inner.png" alt="">
                 </div>
                 <div class="course__right col-lg-5 animate__animated animate__fadeIn animate__delay-2s">
                     <form class="course__form">
@@ -238,15 +247,15 @@
                         <div class="form-row">
                             <div class="form-group col-md-6">
                                 <span class="icon__name"><i class="far fa-user"></i></span>
-                                <input type="name" class="form-control" id="inputEmail4" placeholder="Name">
+                                <input type="name" class="form-control" id="inputEmail4" placeholder="Name" required>
                             </div>
                             <div class="form-group col-md-6">
                                 <span class="icon__email"><i class="fas fa-envelope"></i></span>
-                                <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                                <input type="email" class="form-control" id="inputEmail4" placeholder="Email" required>
                             </div>
                             <div class="form-group col-md-12">
                                 <span class="icon__language"><i class="fas fa-graduation-cap"></i></span>
-                                <select id="" class="form-control custom-select">
+                                <select id="" class="form-control custom-select" required>
                                     <option>English</option>
                                     <option>French</option>
                                     <option>Spanish</option>
@@ -260,9 +269,10 @@
                                     placeholder="Your Message"></textarea>
                             </div>
                         </div>
-                        <button type="submit" class="btn__course">SEND</button>
-                    </form>
 
+                        <input type="submit" value="SEND" class="btn btn__course">
+
+                    </form>
                 </div>
                 <div class="bg__image--course">
                     <img class="image__course" src="./images/accent_bottom_wave_01.png  " alt="">
@@ -276,7 +286,8 @@
     <footer id="footer">
         <div class="container footer__content">
             <div class="row">
-                <div class="footer__contact col-lg-3 animate__animated animate__fadeIn animate__delay-2s animate__faste 100ms">
+                <div
+                    class="footer__contact col-lg-3 animate__animated animate__fadeIn animate__delay-2s animate__faste 100ms">
                     <h5>Contact us</h5>
                     <div class="footer__location footer__contact--detail ">
                         <span class="contact__icon"><i class="fas fa-map-marker-alt"></i></span>
@@ -300,7 +311,8 @@
                     </div>
 
                 </div>
-                <div class="footer__link col-lg-3 animate__animated animate__fadeIn animate__delay-3s animate__faste 100ms">
+                <div
+                    class="footer__link col-lg-3 animate__animated animate__fadeIn animate__delay-3s animate__faste 100ms">
                     <h5>Quick Links</h5>
                     <ul>
                         <li><a href="#">Home</a></li>
@@ -310,7 +322,8 @@
                     </ul>
 
                 </div>
-                <div class="footer__link col-lg-3 animate__animated animate__fadeIn animate__delay-4s animate__faste 100ms">
+                <div
+                    class="footer__link col-lg-3 animate__animated animate__fadeIn animate__delay-4s animate__faste 100ms">
                     <h5>About</h5>
                     <ul>
                         <li><a href="#">About Us</a></li>
@@ -320,16 +333,17 @@
                     </ul>
 
                 </div>
-                <div class="footer__form col-lg-3 animate__animated animate__fadeIn animate__delay-5s animate__faste 100ms">
+                <div
+                    class="footer__form col-lg-3 animate__animated animate__fadeIn animate__delay-5s animate__faste 100ms">
                     <h5>Newsletter</h5>
                     <form">
                         <div class="form-row">
                             <div class="form-group col-lg-11">
-                                <input type="email" class="form-control footer__email" id="" placeholder="Your email">
+                                <input type="email" class="form-control footer__email" id="" placeholder="Your email"
+                                    required>
                             </div>
                             <div class="form-group col-lg-11">
-                                <button type="submit" class="form-control btn__footer">SUBSCRIBE</button>
-
+                                <input type="submit" value="SUBSCRIBE" class="form-control btn__footer">
                             </div>
                         </div>
 
@@ -353,8 +367,10 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <!-- Wowjs -->
-
     <script src="./libs/animation/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
     <!-- Sticky -->
     <script src="./libs/sticky/sticky.js"></script>
 
