--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Header -->
     <header>
         <div class="header__nav">
-            <nav class="container navbar navbar-expand-md navbar-dark">
+            <nav class="container-fluid navbar navbar-expand-lg navbar-light">
                 <!-- Brand -->
                 <a class="navbar-brand" href="#">
                     <img class="logo" src="./images/crest.png" alt="">
@@ -87,7 +87,7 @@
 
     <!-- Carousel -->
     <section id="carousel">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row carousel__content align-items-center">
                 <div class="carousel__left col-lg-6 animate__animated animate__fadeInLeft">
                     <h1><span class="title__headline">ABOUT US</span></h1>
@@ -108,10 +108,10 @@
 
     <!-- Our Team -->
     <section id="ourteam">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div
-                    class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-2s animate__faste 100ms">
+                    class="card__item col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12 animate__animated animate__fadeIn animate__delay-2s animate__faste 100ms">
                     <div class="card card__image">
                         <div class="card__image--hover">
                             <img id="txtImage" class="card-img-top" src="./images/teacher_1.jpg" alt="Card image">
@@ -126,7 +126,7 @@
                     </div>
                 </div>
                 <div
-                    class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-3s animate__faste 100ms">
+                    class="card__item col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12 animate__animated animate__fadeIn animate__delay-3s animate__faste 100ms">
                     <div class="card card__image">
                         <div class="card__image--hover">
                             <img class="card-img-top" src="./images/teacher_2.jpg" alt="Card image">
@@ -140,7 +140,7 @@
                     </div>
                 </div>
                 <div
-                    class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-4s animate__faste 100ms">
+                    class="card__item col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12 animate__animated animate__fadeIn animate__delay-4s animate__faste 100ms">
                     <div class="card card__image">
                         <div class="card__image--hover">
                             <img class="card-img-top" src="./images/teacher_3.jpg" alt="Card image">
@@ -154,7 +154,7 @@
                     </div>
                 </div>
                 <div
-                    class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-5s animate__faste 100ms">
+                    class="card__item col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12 animate__animated animate__fadeIn animate__delay-5s animate__faste 100ms">
                     <div class="card card__image">
                         <div class="card__image--hover">
                             <img class="card-img-top" src="./images/teacher_4.jpg" alt="Card image">
@@ -168,7 +168,7 @@
                     </div>
                 </div>
                 <div
-                    class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-2s animate__faste 100ms">
+                    class="card__item col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12 animate__animated animate__fadeIn animate__delay-2s animate__faste 100ms">
                     <div class="card card__image">
                         <div class="card__image--hover">
                             <img class="card-img-top" src="./images/teacher_5.jpg" alt="Card image">
@@ -182,7 +182,7 @@
                     </div>
                 </div>
                 <div
-                    class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-3s animate__faste 100ms">
+                    class="card__item col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12 animate__animated animate__fadeIn animate__delay-3s animate__faste 100ms">
                     <div class="card card__image">
                         <div class="card__image--hover">
                             <img class="card-img-top" src="./images/teacher_6.jpg" alt="Card image">
@@ -196,7 +196,7 @@
                     </div>
                 </div>
                 <div
-                    class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-4s animate__faste 100ms">
+                    class="card__item col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12 animate__animated animate__fadeIn animate__delay-4s animate__faste 100ms">
                     <div class="card card__image">
                         <div class="card__image--hover">
                             <img class="card-img-top" src="./images/teacher_7.jpg" alt="Card image">
@@ -210,7 +210,7 @@
                     </div>
                 </div>
                 <div
-                    class="card__item col-lg-3 animate__animated animate__fadeIn animate__delay-5s animate__faste 100ms">
+                    class="card__item col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12 animate__animated animate__fadeIn animate__delay-5s animate__faste 100ms">
                     <div class="card card__image">
                         <div class="card__image--hover">
                             <img class="card-img-top" src="./images/teacher_8.jpg" alt="Card image">
@@ -236,7 +236,7 @@
 
     <!-- Course -->
     <section id="course">
-        <div class="container course__content">
+        <div class="container-fluid course__content">
             <div class="row">
                 <div class="course__left col-lg-7 animate__animated animate__fadeInLeft"">
                     <img src=" ./images/conatct_inner.png" alt="">
@@ -284,10 +284,10 @@
     <!-- Footer -->
 
     <footer id="footer">
-        <div class="container footer__content">
+        <div class="container-fluid footer__content">
             <div class="row">
                 <div
-                    class="footer__contact col-lg-3 animate__animated animate__fadeIn animate__delay-2s animate__faste 100ms">
+                    class="footer__contact col-lg-3 col-md-6 col-sm-6 col-xs-12 animate__animated animate__fadeIn animate__delay-2s animate__faste 100ms">
                     <h5>Contact us</h5>
                     <div class="footer__location footer__contact--detail ">
                         <span class="contact__icon"><i class="fas fa-map-marker-alt"></i></span>
@@ -312,7 +312,7 @@
 
                 </div>
                 <div
-                    class="footer__link col-lg-3 animate__animated animate__fadeIn animate__delay-3s animate__faste 100ms">
+                    class="footer__link col-lg-3 col-md-6 col-sm-6 col-xs-12 animate__animated animate__fadeIn animate__delay-3s animate__faste 100ms">
                     <h5>Quick Links</h5>
                     <ul>
                         <li><a href="#">Home</a></li>
@@ -323,7 +323,7 @@
 
                 </div>
                 <div
-                    class="footer__link col-lg-3 animate__animated animate__fadeIn animate__delay-4s animate__faste 100ms">
+                    class="footer__link col-lg-3 col-md-6 col-sm-6 col-xs-12 animate__animated animate__fadeIn animate__delay-4s animate__faste 100ms">
                     <h5>About</h5>
                     <ul>
                         <li><a href="#">About Us</a></li>
@@ -334,7 +334,7 @@
 
                 </div>
                 <div
-                    class="footer__form col-lg-3 animate__animated animate__fadeIn animate__delay-5s animate__faste 100ms">
+                    class="footer__form col-lg-3 col-md-6 col-sm-6 col-xs-12 animate__animated animate__fadeIn animate__delay-5s animate__faste 100ms">
                     <h5>Newsletter</h5>
                     <form">
                         <div class="form-row">
