--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Header -->
     <header>
         <div class="header__nav">
-            <nav class="container-fluid navbar navbar-expand-lg navbar-light">
+            <nav class="container-fluid navbar navbar-expand-xl navbar-light">
                 <!-- Brand -->
                 <a class="navbar-brand" href="#">
                     <img class="logo" src="./images/crest.png" alt="">
