--- a/index.html
+++ b/index.html
@@ -64,20 +64,19 @@
                             <a class="nav-link" href="#">Elements</a>
                         </li>
                     </ul>
-                </div>
+                    <div class="phone__navbar">
+                        <a class="btn__callphone" href="#"><span><i class="fa-solid fa-phone-flip"></i></span>
+                            <span>(+1) 555 234-8765</span></a>
+                    </div>
 
-                <div class="phone_navbar">
-                    <a class="btn__callphone" href="#"><span><i class="fa-solid fa-phone-flip"></i></span>
-                        <span>(+1) 555 234-8765</span></a>
-                </div>
-
-                <div class="socials_navbar">
-                    <ul class="d-flex my-1">
-                        <li class="social__header"><i class="fab fa-twitter"></i><a href="#"></a></li>
-                        <li class="social__header"><i class="fab fa-facebook-f"></i><a href="#"></a></li>
-                        <li class="social__header"><i class="fab fa-youtube"></i><a href="#"></a></li>
-                        <li class="social__header"><i class="fab fa-instagram"></i><a href="#  "></a></li>
-                    </ul>
+                    <div class="socials__navbar">
+                        <ul class="d-flex my-1">
+                            <li class="social__header"><i class="fab fa-twitter"></i><a href="#"></a></li>
+                            <li class="social__header"><i class="fab fa-facebook-f"></i><a href="#"></a></li>
+                            <li class="social__header"><i class="fab fa-youtube"></i><a href="#"></a></li>
+                            <li class="social__header"><i class="fab fa-instagram"></i><a href="#  "></a></li>
+                        </ul>
+                    </div>
                 </div>
             </nav>
 
